# megahal

./: Makefile.am  acinclude.m4  config.h.in  configure.ac
data/: Makefile.am
doc/: Makefile.am  megahal.8.in
python/: Makefile.am  setup.py
src/: Makefile.am  debug.c  debug.h  main.c  megahal.c
